# SF340

./: .env.example  .eslintrc.cjs  .gitignore  db.sqlite  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/data/: tolls.json
backend/app/function/: google_maps.py
backend/app/providers/: __init__.py  arl.py  bts.py  mrt.py  srt.py  tolls.py
frontend/: .eslintrc.cjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: env.js
frontend/src/app/: page.tsx
frontend/src/components/: nav.tsx
frontend/src/components/expressway/: destination-popover.tsx  expressway-card.tsx  expressway-form.tsx  origin-field.tsx  origin-popover.tsx  vehicle-type-popover.tsx
frontend/src/components/gmaps/: gmaps-card.tsx  (+4 more)
nginx/: default.conf
public/: toll_connections.json  toll_fares.json  vehicle_types.json
src/: env.js
src/app/: layout.tsx  page.tsx
src/app/expressway/: page.tsx
src/app/taxi/: page.tsx
src/app/train/: page.tsx
src/components/: directions.tsx  dropdown.tsx  nav.tsx
src/components/expressway/: destination-field.tsx  destination-popover.tsx  expressway-form.tsx  origin-popover.tsx  vehicle-type-field.tsx  vehicle-type-popover.tsx
src/components/taxi/: airport-checkbox.tsx  commu-checkbox.tsx  taxi-card.tsx  taxi-form.tsx  type-field.tsx  type-popover.tsx
src/components/train/: destination-popover.tsx  origin-popover.tsx  train-field.tsx  train-form.tsx
src/server/db/: schema.ts
src/styles/: globals.css
(+9 files in other folders)
