[project]
name = "backend"
version = "2.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Tinn-K", email = "tinn.kanjananuwat@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.3",
    "uvicorn[standard]>=0.29.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "python-dotenv>=1.0.1",
    "polyline>=2.0.2",
    "shapely>=2.0.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
